--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorNew.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorNew.xhtml
@@ -10,7 +10,7 @@
 	</ui:define>
 	
 	<ui:define name="formBody">
-		
+		<ui:include src="/xhtml/admin/administrators/administratorForm.xhtml"/>
 	</ui:define>
 	
 	<ui:define name="formButtons">
