--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorEdit.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorEdit.xhtml
@@ -14,8 +14,8 @@
 	</ui:define>
 	
 	<ui:define name="formButtons">
-		<h:commandButton value="#{msg.privateAreaActionSave}" styleClass="customButton buttonMainForm" action="#{administratorBean.insert}" immediate="false" />
-		<h:commandButton value="#{msg.privateAreaActionCancel}" styleClass="customButton buttonMainForm" action="#{administratorBean.list}" immediate="true"/>
+		<h:commandButton value="#{msg.privateAreaActionSave}" styleClass="customButton buttonMainForm" action="#{administratorBean.save}" immediate="false" />
+		<h:commandButton value="#{msg.privateAreaActionCancel}" styleClass="customButton buttonMainForm" action="#{administratorBean.list}" immediate="true" />
 	</ui:define>
 	
 </ui:composition>
