--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorForm.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorForm.xhtml
@@ -3,7 +3,7 @@
 				xmlns:h="http://java.sun.com/jsf/html"
 				xmlns:t="http://myfaces.apache.org/tomahawk">
 				
-	<h:panelGrid columns="2" columnClasses="columnLabel, columnInput">
+	<h:panelGrid styleClass="tableInputForm" columns="2" columnClasses="columnLabel, columnInput">
 		<h:outputLabel value="#{msg.privateAreaLoginName}:" for="userName"/>
 		<h:inputText id="userName" value="#{administratorBean.administrator.fullname}" maxlength="50" styleClass="inputMainForm bigInputMainForm"/>
 
