--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorConsult.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorConsult.xhtml
@@ -30,7 +30,7 @@
 	
 	<ui:define name="formButtons">
 		<h:commandButton value="#{msg.privateAreaActionEdit}" styleClass="customButton buttonMainForm" action="#{administratorBean.edit}" immediate="false" />
-		<h:commandButton value="#{msg.privateAreaActionDelete}" styleClass="customButton buttonMainForm" action="#{administratorBean.delete}" immediate="false" />
+		<h:commandButton value="#{msg.privateAreaActionDelete}" styleClass="customButton buttonMainForm" action="#{administratorBean.delete}" immediate="false" onclick="#{msg.actionConfirmDelete}"/>
 		<h:commandButton value="#{msg.privateAreaActionCancel}" styleClass="customButton buttonMainForm" action="#{administratorBean.list}" immediate="true"/>
 	</ui:define>
 	
