--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorEdit.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorEdit.xhtml
@@ -6,7 +6,7 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 	
 	<ui:define name="formDescription">
-		<h:outputText value="#{msg.privateAreaAdminatrators} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionNew}"/>
+		<h:outputText value="#{msg.privateAreaAdminatrators} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionEdit}"/>
 	</ui:define>
 	
 	<ui:define name="formBody">
