--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorList.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorList.xhtml
@@ -1,12 +1,11 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	template="/xhtml/bases/adminbase.xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:a4j="http://richfaces.org/a4j"
 	xmlns:rich="http://richfaces.org/rich"
-	xmlns:t="http://myfaces.apache.org/tomahawk">
+	xmlns:t="http://myfaces.apache.org/tomahawk"
+	xmlns:bargas="http://barganhas.com.br/barganhas">
 	
 	<ui:define name="formDescription">
 		<h:outputText value="#{msg.privateAreaAdminatrators} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionList}"/>
@@ -24,14 +23,8 @@
 			
 			<!-- actions -->
 			<rich:column styleClass="columnListActions">
-				<h:commandLink action="#{administratorBean.edit}" >
-					<h:graphicImage value="#{request.contextPath}/images/configure.png"/>
-					<f:setPropertyActionListener value="#{administrator}" target="#{administratorBean.administrator}"/>
-				</h:commandLink>
-				<h:commandLink action="#{administratorBean.delete}" >
-					<h:graphicImage value="#{request.contextPath}/images/garbage.png"/>
-					<f:setPropertyActionListener value="#{administrator}" target="#{administratorBean.administrator}"/>
-				</h:commandLink>
+				<bargas:commandListEdit targetProperty="administrator" backingBean="#{administratorBean}" action="edit" propertyFrom="#{administrator}"/>
+				<bargas:commandListDelete targetProperty="administrator" backingBean="#{administratorBean}" action="delete" propertyFrom="#{administrator}"/>
 			</rich:column>
 			
 			<!-- user name -->
