--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeList.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeList.xhtml
@@ -7,8 +7,12 @@
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 	xmlns:bargas="http://barganhas.com.br/barganhas">
 	
-	<ui:define name="formDescription">
-		<h:outputText value="#{msg.privateAreaAdvertisementType} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionList}"/>
+	<ui:define name="headForm">
+		<bargas:headFormFilter headText="#{msg.privateAreaAdvertisementType} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionList}">
+			<ui:define name="formFilter">
+				<ui:include src="/xhtml/admin/advertisementType/advertisementTypeFilter.xhtml"/>
+			</ui:define>
+		</bargas:headFormFilter>
 	</ui:define>
 	
 	<ui:define name="formBody">
