--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorForm.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorForm.xhtml
@@ -1,14 +1,17 @@
 <ui:composition	xmlns="http://www.w3.org/1999/xhtml" 
 				xmlns:ui="http://java.sun.com/jsf/facelets"
 				xmlns:h="http://java.sun.com/jsf/html"
-				xmlns:t="http://myfaces.apache.org/tomahawk">
+				xmlns:t="http://myfaces.apache.org/tomahawk"
+				xmlns:f="http://java.sun.com/jsf/core">
 				
 	<h:panelGrid styleClass="tableInputForm" columns="2" columnClasses="columnLabel, columnInput">
 		<h:outputLabel value="#{msg.privateAreaLoginName}:" for="userName"/>
 		<h:inputText id="userName" value="#{administratorBean.administrator.fullname}" maxlength="50" styleClass="inputMainForm bigInputMainForm"/>
 
 		<h:outputLabel value="#{msg.privateAreaLoginEmail}:" for="userEmail"/>
-		<h:inputText id="userEmail" value="#{administratorBean.administrator.email}" maxlength="50" styleClass="inputMainForm bigInputMainForm"/>
+		<h:inputText id="userEmail" value="#{administratorBean.administrator.email}" maxlength="50" styleClass="inputMainForm bigInputMainForm">
+			<f:validator validatorId="EmailValidator" for="userEmail"/>
+		</h:inputText>
 		
 		<h:outputLabel value="#{msg.privateAreaLoginUser}:" for="userNickname"/>
 		<h:inputText id="userNickname" value="#{administratorBean.administrator.nickname}" maxlength="50" styleClass="inputMainForm mediumInputMainForm"/>
