--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorFilter.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/administrators/administratorFilter.xhtml
@@ -14,7 +14,10 @@
 			<h:inputText value="#{administratorBean.administrator.nickname}" maxlength="50" styleClass="inputMainForm mediumInputMainForm"/>
 			
 			<h:column />
-			<h:commandButton value="buscar" styleClass="customButton buttonMainForm" action="#{administratorBean.prepareNew}" immediate="true" />
+			<h:panelGrid columns="2">
+				<h:commandButton value="#{msg.buttonFind}" styleClass="customButton buttonMainForm" action="#{administratorBean.filter}" immediate="false" />
+				<h:commandButton value="#{msg.buttonClear}" styleClass="customButton buttonMainForm" action="#{administratorBean.list}" immediate="true" />
+			</h:panelGrid>
 		</h:panelGrid>
 		
 		<t:saveState value="#{administratorBean.administrator}"/>
