--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/sales/salesFilter.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/sales/salesFilter.xhtml
@@ -10,10 +10,13 @@
 		
 		<!-- salesCode -->
 		<h:outputLabel value="#{msg.privateAreaSalesCode}:" for="salesCode"/>
-		<h:inputText id="salesCode" value="#{salesBean.sales.salesCode}" maxlength="50" styleClass="inputMainForm mediumInputMainForm" readonly="true"/>
+		<h:inputText id="salesCode" value="#{salesBean.sales.salesCode}" maxlength="50" styleClass="inputMainForm mediumInputMainForm"/>
 		
 		<h:column />
-		<h:commandButton value="buscar" styleClass="customButton buttonMainForm" action="#{administratorBean.prepareNew}" immediate="true" />
+		<h:panelGrid columns="2">
+			<h:commandButton value="#{msg.buttonFind}" styleClass="customButton buttonMainForm" action="#{salesBean.filter}" immediate="false" />
+			<h:commandButton value="#{msg.buttonClear}" styleClass="customButton buttonMainForm" action="#{salesBean.list}" immediate="true" />
+		</h:panelGrid>
 	</h:panelGrid>
 
 	<t:saveState value="#{salesBean.sales}"/>
