--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/account/accountEdit.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/account/accountEdit.xhtml
@@ -7,7 +7,7 @@
 	
 	<ui:define name="userAccountRightContent">
 		<h:panelGroup layout="block" styleClass="boxUserAccountForm boxUserAccountFormContext">
-			<h:outputText value="#{msg.myRegister} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionView}"/>
+			<h:outputText value="#{msg.myRegister} #{msg.privateAreaFormSeparatorHeader} #{msg.privateAreaActionEdit}"/>
 		</h:panelGroup>
 		<h:panelGroup styleClass="boxUserAccountForm boxUserAccountFormInputs" layout="block">
 			<h:panelGrid styleClass="tableInputFormUserAccount" columns="2" columnClasses="columnLabel, columnInput">
