--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/login.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/login.xhtml
@@ -11,6 +11,7 @@
    		<h:head>
    			<title><h:outputText value="#{msg.privateAreaTitle}"/></title>
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-admin.css" />
+			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-messages.css" />
    			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
    			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
    		</h:head>
