--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/accountbase.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/accountbase.xhtml
@@ -3,7 +3,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:t="http://myfaces.apache.org/tomahawk">
 	
 	<ui:define name="bodyNavigation">
 		<h:panelGroup layout="block" styleClass="wrapperUserAccount">
@@ -23,5 +24,7 @@
 				</h:panelGroup>
 			</h:panelGrid>
 		</h:panelGroup>
+		
+		<t:saveState value="#{userAccountBean.userAccount}"/>
 	</ui:define>
 </ui:composition>
