--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeFilter.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeFilter.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 		xmlns:ui="http://java.sun.com/jsf/facelets"
 		xmlns:t="http://myfaces.apache.org/tomahawk"
-		xmlns:h="http://java.sun.com/jsf/html">
+		xmlns:h="http://java.sun.com/jsf/html"
+		xmlns:rich="http://richfaces.org/rich">
 
 	<h:panelGrid styleClass="tableInputForm" columns="2" columnClasses="columnLabel, columnInput">
 		<!-- title -->
@@ -11,6 +12,16 @@
 		<!-- currency -->
 		<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currency"/>
 		<h:inputText id="currency" value="#{advertisementTypeBean.advertisementType.value}" maxlength="11" styleClass="inputMainForm mediumInputMainForm"/>
+		
+		<!-- advertisiment score -->
+		<h:outputLabel value="#{msg.privateAreaAdvertisementScore}:" for="advertisementScore"/>
+		<h:inputText id="advertisementScore" value="#{advertisementTypeBean.advertisementType.advertisementScore}"
+					maxlength="11" styleClass="inputMainForm mediumInputMainForm"/>
+		
+		<!-- total pictures -->
+		<h:outputLabel value="#{msg.privateAreaTotalImages}:" for="totalImages"/>
+		<h:inputText id="totalImages" value="#{advertisementTypeBean.advertisementType.totalPictures}"
+					maxlength="11" styleClass="inputMainForm mediumInputMainForm"/>
 		
 		<h:column />
 		<h:panelGrid columns="2">
