--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
@@ -12,6 +12,7 @@
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-admin.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-messages.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-richfaces.css" />
+			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-shared.css" />
    			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
    			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
    		</h:head>
